# writer_copilot_gui

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt
cli_first_app/: .gitignore  COMPLETE.md  EXAMPLES.md  INTEGRATION_REPORT.md  QUICKSTART.md  README.md  chat.py  paper-cli.py  pyproject.toml  requirements-standalone.txt  run-paper.bat  run-paper.ps1  run-paper.sh
cli_first_app/scripts/: check_deps.py  init_db.py  test_agent.py  verify_integration.py
cli_first_app/skills/file_ops/: config.json  skill.md
cli_first_app/skills/todo/: config.json  skill.md
cli_first_app/src/: __init__.py  infra.py  llm.py  main.py  memory.py  tools.py
cli_first_app/src/core/: __init__.py
cli_first_app/src/core/agent/: __init__.py  memory_driven_agent.py  prompts.py  state.py
cli_first_app/src/core/memory/: __init__.py  embedding_service.py  memory_service.py
cli_first_app/src/core/skills/: __init__.py  filesystem_skill_loader.py  filter_service.py  skill_service.py  tool_registry.py
cli_first_app/src/infrastructure/database/: __init__.py  connection.py  models.py
cli_first_app/src/infrastructure/llm/: __init__.py  openrouter_client.py
cli_first_app/src/infrastructure/utils/: cli_colors.py
cli_first_app/src/repositories/: __init__.py  base.py  tag_repository.py  task_repository.py
cli_first_app/src/services/: __init__.py  search_service.py
cli_first_app/src/skills/: __init__.py  initialize.py
cli_first_app/src/skills/file_ops/: __init__.py  setup.py  tools.py
cli_first_app/src/skills/todo/: __init__.py  search_tools.py  (+2 more)
(+36 files in other folders)
